# real_estate_allocation

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix
.github/workflows/: errors.yml  release-container.yml
deploy/: config.nix  config.toml
docs/: ARCHITECTURE.md  data:real_estate.excalidraw  perf.md
docs/.readme_assets/: description.md  installation.md
docs/refs/: amazon_product_page.html  insilicoterminal_5.3.html
examples/: config.nix  legacy_import_smoke.rs  lots_panel.html  portfolio_diff.rs  seed_smoke.rs  uikit_compare.rs
impl_log/: README.md  adding_buildings.md  amazon-ux-principles.md
mfe-dist/: mfe-real-estate-overview.js  mfe.css  mfe.json  real_estate_allocation_mfe.d.ts  real_estate_allocation_mfe.js  real_estate_allocation_mfe_bg.wasm  real_estate_allocation_mfe_bg.wasm.d.ts
mfe-dist/snippets/ev_lib-9f784e699d635595/: inline0.js
mfe-dist/snippets/real_estate_allocation-09c8442faed30306/: inline0.js  inline1.js  inline2.js
public/: dashboard_layout.json
public/data/properties/0b654ef7-a529-426d-b302-5c567504807c/: place.json
public/data/properties/12958cdb-b5e1-4aa3-80dd-91a8b9048916/: place.json
public/data/properties/12e90fa2-07bc-4457-a165-7d2c1619379d/: place.json
public/data/properties/1eeab4aa-c377-4fcb-aebd-57f917a0b844/: place.json
public/data/properties/4c620b1c-8efa-4e64-a101-bd20862c9975/: place.json
public/data/properties/6d97e439-9668-44f3-b5ba-cd8654cbda7e/: place.json
public/data/properties/70d80132-34df-4010-86e2-de24042f9110/: place.json
public/data/properties/78479102-9bbe-40a0-86eb-dcd4c251584e/: place.json
public/data/properties/9a5a7d3b-cd42-4d65-a426-5b705a3d0cc9/: place.json
public/data/properties/9c4acfee-9597-455e-b983-b60143fdaa90/: place.json
public/data/properties/9c6f58a7-66e0-4f02-a9af-71980a3ff205/: place.json
public/data/properties/b41510ef-1e74-4d4f-a15c-1dfafdd0ee5a/: place.json
public/data/properties/ba4488df-a706-4c78-86ec-ab2745905e11/: place.json
public/data/properties/c19bded1-1a13-49ad-a0f0-549b2aec2d0e/: place.json
public/data/properties/cc5944da-1071-483b-9a21-1d1b38dd525c/: place.json
public/data/properties/d030c2c0-a004-4611-a1f6-10f70d96867b/: place.json
public/data/properties/dd5a8289-a5cd-4fb4-8e69-582b065179fc/: place.json
public/data/properties/e205f57a-d203-4913-90d1-f59d38495cd4/: place.json
real_estate_allocation/: Cargo.toml  Dioxus.toml  build.rs  input.css  mfe.css  package-lock.json  package.json  uikit_classes.txt
real_estate_allocation/assets/: tailwind.css  tokens.css
real_estate_allocation/examples/: portfolio_diff.rs  portfolio_original.html  seed_smoke.rs  uikit_compare.rs
real_estate_allocation/migrations/: 0001_init.sql  0002_state_into_sqlite.sql
real_estate_allocation/src/: api.rs  app.rs  chrome.rs  config.rs  dashboard.rs  domain.rs  embed.rs  factors.rs  lib.rs  main.rs  map.rs  store.rs  sync.rs  uikit.rs
real_estate_allocation/src/panels/: chart.rs  details.rs  header.rs  heatmap.rs  lots.rs  media.rs  mod.rs
real_estate_allocation/src/panels/snapshots/: real_estate_allocation__panels__heatmap__tests__heatmap_all.snap  real_estate_allocation__panels__heatmap__tests__heatmap_book.snap  real_estate_allocation__panels__heatmap__tests__heatmap_mixed_book.snap  real_estate_allocation__panels__heatmap__tests__heatmap_nothing.snap  real_estate_allocation__panels__heatmap__tests__heatmap_purchased.snap
real_estate_allocation_core/: Cargo.toml
real_estate_allocation_core/src/: factors.rs  lib.rs
real_estate_allocation_embeds/: Cargo.toml
real_estate_allocation_embeds/examples/: portfolio_snapshot.rs
real_estate_allocation_embeds/src/: lib.rs  view.rs
real_estate_allocation_macros/: Cargo.toml
real_estate_allocation_mfe/: Cargo.toml
real_estate_allocation_mfe/src/: lib.rs
