cargo-features = ["codegen-backend"]

[workspace]
members = ["real_estate_allocation", "real_estate_allocation_*"]
default-members = ["real_estate_allocation"]
resolver = "3"

[workspace.lints.clippy]
float_cmp = "allow"
len_zero = "allow"
undocumented_unsafe_blocks = "warn"
tabs_in_doc_comments = "allow"
doc_lazy_continuation = "allow"
get_first = "allow"
get_last_with_len = "allow"
manual_is_multiple_of = "allow"

[workspace.lints.rust]
unused_features = "allow"

[workspace.dependencies]
clap = { version = "^4.6", features = ["derive"] }
color-eyre = "^0.6"
derive-new = "^0.7"
dockview_dioxus = "^0.1.2"
miette = { version = "^7.6", features = ["fancy", "serde", "syntect-highlighter"] }
real_estate_allocation_macros = { path = "real_estate_allocation_macros" }
reqwest = { version = "^0.13", default-features = false, features = ["json", "rustls"] }
v_utils = { version = "^2.15.52", features = ["io", "macros", "cli"] }

# microfrontend stack — pinned to the exact revs `site` verified against.
async-trait = "^0.1"
dioxus = { version = "^0.7" }
dioxus-ssr = "0.7"
ev_lib = "^0.3"
getrandom = { version = "^0.4", features = ["wasm_js"] }
insta = "^1"
jiff = { version = "^0.2", features = ["serde"] }
secrecy = "^0.10"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
smart-default = "^0.7"
sqlx = { version = "^0.9", default-features = false, features = ["runtime-tokio", "sqlite", "macros"] }
strum = "0.28.0"
thiserror = "^2.0"
tokio = { version = "^1", features = ["full"] }
uuid = { version = "^1", features = ["serde", "v4"] }
wasm-bindgen = "=0.2.125"

# Local checkout overrides the git source — we edit the lib alongside the app.
#[patch."https://github.com/EV-invest/lib.git"]
#ev_lib = { path = "../lib/rust" }

#[patch.crates-io]
#dockview_dioxus.path = "../dockview_dioxus/dockview_dioxus/"
