[package]
name = "real_estate_allocation"
version = "0.1.0"
edition = "2024"

[features]
# `dx serve` toggles these per-build; mirrors dioxus' own split so the platform
# auto-detects correctly.
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["fullstack", "server"] }
ev = { workspace = true, features = ["architecture", "uikit"] }
# `config` (with its SmartDefault'd AppConfig) is server-only.
smart-default.workspace = true
sqlx.workspace = true
tokio.workspace = true
# v_utils is native-only: the wasm client uses none of it directly, and its
# `io`/`distributions` features pull `ustr`→`ahash` and `rand`, both of which
# drag in a `getrandom` with no wasm backend. `distributions` →
# `laplace_random_walk` (price-series mock); `io` → `ExpandedPath`/`LiveSettings`.
# `tracing` + `xdg`: route `clientside!` logs to a file under the XDG state dir
# instead of stdout (otherwise the macro warns and only prints to the terminal).
v_utils = { workspace = true, features = ["distributions", "io", "macros", "cli", "tracing", "xdg"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["fullstack", "web"] }
ev = { workspace = true, features = ["architecture", "uikit", "wasm"] }
getrandom.workspace = true
uuid = { workspace = true, features = ["js"] }
wasm-bindgen.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
color-eyre.workspace = true
derive-new.workspace = true
dioxus = { workspace = true, features = ["fullstack", "router"] }
dockview_dioxus.workspace = true
jiff.workspace = true
miette.workspace = true
real_estate_allocation_macros.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
