[package]
name = "real_estate_allocation"
version = "0.1.0"
edition = "2024"

[features]
# `dx serve` toggles these per-build; mirrors dioxus' own split so the platform
# auto-detects correctly.
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["fullstack", "server"] }
ev_lib = { workspace = true, features = ["architecture", "uikit"] }
# `config` (with its SmartDefault'd AppConfig) is server-only.
reqwest.workspace = true
smart-default.workspace = true
sqlx.workspace = true
tokio.workspace = true
v_utils = { workspace = true, features = ["distributions", "io", "macros", "cli", "tracing", "xdg"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["fullstack", "web"] }
ev_lib = { workspace = true, features = ["architecture", "uikit", "wasm"] }
getrandom.workspace = true
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
uuid = { workspace = true, features = ["js"] }
v_utils = { version = "^2.15.53", default-features = false, features = ["trades"] }
wasm-bindgen.workspace = true

[dependencies]
async-trait.workspace = true
clap.workspace = true
color-eyre.workspace = true
derive-new.workspace = true
dioxus = { workspace = true, features = ["fullstack", "router"] }
dockview_dioxus.workspace = true
jiff.workspace = true
miette.workspace = true
real_estate_allocation_macros.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["strum_macros", "derive"] }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
dioxus-ssr = { workspace = true }

# examples live at the repo root, not under the crate.
[[example]]
name = "portfolio_diff"
path = "../examples/portfolio_diff.rs"

[[example]]
name = "seed_smoke"
path = "../examples/seed_smoke.rs"

[[example]]
name = "uikit_compare"
path = "../examples/uikit_compare.rs"

[lints]
workspace = true
