[package]
name = "real_estate_allocation"
version = "0.1.0"
edition = "2024"

[features]
# `dx serve` toggles these per-build; mirrors dioxus' own split so the platform
# auto-detects correctly.
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus = { workspace = true, features = ["fullstack", "server"] }
ev_lib = { workspace = true, features = ["architecture", "uikit"] }
# `config` (with its SmartDefault'd AppConfig) is server-only.
reqwest.workspace = true
smart-default.workspace = true
sqlx.workspace = true
tokio.workspace = true
# Serves the built MFE bundle at `/mfe` (`fs`) under a cross-origin allowlist (`cors`).
tower-http = { version = "0.6", features = ["fs", "cors"] }
v_utils = { workspace = true, features = ["distributions", "io", "macros", "cli", "tracing", "xdg"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus = { workspace = true, features = ["fullstack", "web"] }
ev_lib = { workspace = true, features = ["architecture", "uikit", "wasm"] }
getrandom.workspace = true
getrandom_03 = { package = "getrandom", version = "0.3", features = ["wasm_js"] }
gloo-timers = { version = "0.3", features = ["futures"] }
uuid = { workspace = true, features = ["js"] }
v_utils = { version = "^2.15.53", default-features = false, features = ["trades"] }
wasm-bindgen.workspace = true
web-sys = { workspace = true, features = ["Window", "Location"] }

[dependencies]
async-trait.workspace = true
clap.workspace = true
color-eyre.workspace = true
derive-new.workspace = true
dioxus = { workspace = true, features = ["fullstack", "router"] }
dockview_dioxus.workspace = true
jiff.workspace = true
miette.workspace = true
real_estate_allocation_core.workspace = true
real_estate_allocation_macros.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
strum = { workspace = true, features = ["strum_macros", "derive"] }
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
dioxus-ssr.workspace = true
insta.workspace = true

[[example]]
name = "seed_smoke"
path = "../examples/seed_smoke.rs"

# Dies together with `store::import_legacy` (self-extinguishing prod bridge).
[[example]]
name = "legacy_import_smoke"
path = "../examples/legacy_import_smoke.rs"

[lints]
workspace = true
