[package]
name = "real_estate_allocation_core"
version = "0.1.0"
edition = "2024"

# Pure domain layer: `domain` + `factors` + `error`, with zero dioxus and zero
# miette. Shared by the native dashboard/server (via REA's lib re-export) and the
# wasm embed bundle (`real_estate_allocation_embeds`) — the latter can't pull the
# full REA lib, whose wasm target hard-links dioxus `fullstack`.
[dependencies]
ev_lib = { workspace = true, features = ["architecture"] }
jiff.workspace = true
serde.workspace = true
strum = { workspace = true, features = ["strum_macros", "derive"] }
thiserror.workspace = true
uuid.workspace = true
v_utils = { workspace = true, features = ["trades"] }

[lints]
workspace = true
